# Cpp17-Features-tests

./: README.md  chain-evaluation-order.cpp  constexpr-if.cpp  copy-ellision.cpp  custom-structural-binding.cpp  fast-remove-in-vectors.cpp  init-in-selection.cpp  memory_handle_legacy_api.cpp  non-member-container-functions.cpp  playing-with-std-unique.cpp  redirect-or-ignore-cout.cpp  std-byte.cpp  std-compliant-fibonacci.cpp  std-emplace.cpp  std-sample.cpp  string_conversion.cpp  tuples-string-compression.cpp
math/: clamp.cpp  gcd.cpp  lcm.cpp
std-any/: any-create-and-basics.cpp  any-examples.cpp
std-map-features/: insert-or-assign.cpp  try_emplace.cpp
std-optional/: optional-accessing.cpp  optional-creation.cpp  optional-examples.cpp  optional-safe-failure.cpp
std-regex/: std-regex-basics.cpp
std-search/: CMakeLists.txt  main.cpp
std-search/inc/: fileLoader.hpp  time-measure.hpp
std-variant/: variant-creation.cpp  variant-examples.cpp  variant-helpers.cpp
